kubernetes/ingress-nginx/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  rules:
  - host: whoami.example.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: whoami-service
              port:
                number: 80
  tls:
  - hosts:
    - whoami.example.com
    secretName: whoami-tls
